fixed week 5 update

--- a/public/index.html
+++ b/public/index.html
@@ -200,8 +200,7 @@
 <li>create structured learning plan (identify vital/fundamental study topics)</li>
 </ul>
 <h3 id="impediments">Impediments</h3>
-<p>I spent more time than I expected with the
-I ran into a seemingly unresolvable dependency issue between CausalNex and DoWhy. I have decided to leave causalnex to the side for now, as dowhy seems more useful and important to understand. I will still investigate it in a different virtual environment and write some of my thoughts on how it compares to dowhy, but I will use this as an opportunity to focus the scope of my project.</p>
+<p>I spent more time than I expected to with the venv setup and dependency problems, but this was a good opportunity to learn more about eg. setting up a pyproject.toml file. I ran into a seemingly unresolvable dependency issue between CausalNex and DoWhy. I have decided to leave causalnex to the side for now, as dowhy seems more useful and important to understand. I will still investigate it in a different virtual environment and write some of my thoughts on how it compares to dowhy, but I will use this as an opportunity to focus the scope of my project.</p>
           
         </div>
 
